# ground_segmentation_ros2

./: CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  conference-template.odt  package.xml  paper.bib  paper.md  paper.tex  plugins_description.xml
config/: parameters.yaml  viz_config.rviz
drawio/: robdekon2.drawio
figures/: plot.py
figures/corrections/: before.txt
include/: common.hpp  utils.hpp
include/grid_map_plugin/: GridMapDisplay.hpp
include/ground_detection/: ground_detection.hpp
launch/: ground_segmentation.launch.py
msg/: GridCell.msg  GridMap.msg
src/: GridMapDisplay.cpp  ground_detection.cpp  ground_detection_node.cpp  ground_segmentation_node.cpp  ground_segmentation_ros2_node.cpp
